# md-edit

./: .gitignore  Cargo.toml  README.md  build.bat
.claude/: settings.local.json
.github/workflows/: build-windows.yml
src/: app.rs  config.rs  main.rs
src/editor/: highlighter.rs  mod.rs  text_buffer.rs
src/markdown/: mod.rs
src/preview/: mod.rs
src/theme/: mod.rs
src/ui/: layouts.rs  mod.rs
src/ui/widgets/: mod.rs
src/utils/: mod.rs
